Update Profile Image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="profile-image-container">
                 <div class="profile-glow"></div>
                 <div class="profile-image">
-                    <img style="height: 164%; padding-top:34px" src="https://i.imgur.com/vsl2fZY.png" alt="Jordan Belsito">
+                    <img style="height: 164%; padding-top:34px" src="https://i.imgur.com/0UVEZk7.png" alt="Jordan Belsito">
                 </div>
             </div>
             <div class="hero-text">
@@ -481,4 +481,5 @@
         });
     </script>
 </body>
+
 </html>
