--- a/index.html
+++ b/index.html
@@ -397,9 +397,9 @@
                 Available for IT and systems administration opportunities. Let's connect!
             </p>
             <div class="contact-grid">
-                <a href="mailto:jordanb0728@gmail.com" class="contact-item" style="animation-delay: 0.2s;">
+                <a href="mailto:me@jordanbelsito.com" class="contact-item" style="animation-delay: 0.2s;">
                     <i data-lucide="mail" style="width: 24px; height: 24px;"></i>
-                    <span>jordanb0728@gmail.com</span>
+                    <span>me@jordanbelsito.com</span>
                 </a>
                 <a href="tel:828-772-9988" class="contact-item" style="animation-delay: 0.3s;">
                     <i data-lucide="phone" style="width: 24px; height: 24px;"></i>
@@ -483,3 +483,4 @@
 </body>
 
 </html>
+
