--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="hero-text">
                 <h1>Jordan Belsito</h1>
-                <h2>Systems Administrator & IT Professional</h2>
+                <h2>Aspiring IT Professional</h2>
                 <p>
                     Specializing in datacenter operations, network infrastructure, and technical support. 
                     Committed to continuous learning and excellence in IT systems.
@@ -483,4 +483,5 @@
 </body>
 
 </html>
+
 
