Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             </div>
             <div class="hero-text">
                 <h1>Jordan Belsito</h1>
-                <h2>Aspiring IT Professional</h2>
+                <h2>Developer, SysAdmin & Aspiring IT professional</h2>
                 <p>
-                    Specializing in datacenter operations, network infrastructure, and technical support. 
+                    Specializing in network infrastructure, technical support, and software devlopment. 
                     Committed to continuous learning and excellence in IT systems.
                 </p>
                 <div class="hero-badges">
@@ -483,5 +483,6 @@
 </body>
 
 </html>
+
 
 
