--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="hero-text">
                 <h1>Jordan Belsito</h1>
-                <h2>Developer, SysAdmin & Aspiring IT professional</h2>
+                <h2>Developer/SysAdmin & Aspiring IT professional</h2>
                 <p>
                     Specializing in network infrastructure, technical support, and software devlopment. 
                     Committed to continuous learning and excellence in IT systems.
@@ -483,6 +483,7 @@
 </body>
 
 </html>
+
 
 
 
