--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="hero-text">
                 <h1>Jordan Belsito</h1>
-                <h2>Developer/SysAdmin & Aspiring IT professional</h2>
+                <h2>Developer & Aspiring IT professional</h2>
                 <p>
                     Specializing in network infrastructure, technical support, and software development.
                     Committed to continuous learning and excellence in IT systems.
@@ -456,4 +456,5 @@
     </script>
 </body>
 </html>
+
 
